# moltis

./: .gitignore  .npmrc  404.html  CHANGELOG.md  CLAUDE.md  CNAME  CONTRIBUTING.md  Cargo.toml  Dockerfile  README.md  SECURITY.md  agent-presets.html  anthropic-oauth.html  authentication.html  biome.json  browser-automation.html  caldav.html  changelog.html  channels.html  checkpoints.html  choosing-a-provider.html  cloud-deploy.html  commands.html  compaction.html  comparison.html  configuration-reference.html  configuration.html  deploy-vps.html  discord.html  docker.html  e2e-testing.html  external-agents.html  flake.nix  fly.toml  frontend.html  graphql.html  hooks.html  index.html  install.sh  installation.html  (+52 more)
crates/agents/: Cargo.toml
crates/agents/src/: json_repair.rs  lib.rs  memory_writer.rs  model.rs  prompt.rs  provider_chain.rs  response_sanitizer.rs  runner.rs  silent_turn.rs  tool_arg_validator.rs  tool_loop_detector.rs  tool_parsing.rs  tool_registry.rs
crates/auth/: Cargo.toml
crates/auth/src/: credential_store.rs
crates/benchmarks/: Cargo.toml
crates/benchmarks/benches/: boot.rs  code_index.rs
crates/chat/: Cargo.toml
crates/chat/src/: agent_loop.rs  channels.rs  chat_error.rs  compaction.rs  lib.rs  models.rs  prompt.rs  run_with_tools.rs  runtime.rs  streaming.rs  types.rs
crates/cli/: Cargo.toml
crates/cli/src/: channel_commands.rs  doctor_commands.rs  import_commands.rs  main.rs
crates/common/: Cargo.toml
crates/common/src/: hooks.rs  http_client.rs  lib.rs  ssrf.rs
crates/gateway/: Cargo.toml
crates/gateway/migrations/: 20260328093000_ssh_keys_and_targets.sql  20260328113000_ssh_target_known_host.sql  20260412180000_api_keys_salt.sql  20260412180100_auth_audit_log.sql
crates/gateway/src/: approval.rs  auth.rs  broadcast.rs  channel.rs  channel_agent_tools.rs  channel_events.rs  channel_store.rs  chat.rs  lib.rs  local_llm_setup.rs  mcp_service.rs  message_log_store.rs  methods.rs  node_exec.rs  onboarding.rs  pairing.rs  project.rs  provider_setup.rs  server.rs  services.rs  session.rs  session_types.rs  share_store.rs  state.rs  teams_agent_tools.rs  vault_lifecycle.rs  voice.rs  webhooks.rs
crates/gateway/tests/: auth_middleware.rs  chat_ui.rs  read_skill_tool.rs
crates/gateway/ui/: input.css
crates/httpd/: Cargo.toml
crates/httpd/src/: auth_middleware.rs  auth_routes.rs  graphql_routes.rs  lib.rs  login_guard.rs  metrics_routes.rs  ngrok_routes.rs  request_throttle.rs  server.rs  ssh_routes.rs  tailscale_routes.rs  tools_routes.rs  upload_routes.rs  ws.rs
crates/httpd/tests/: auth_middleware.rs  chat_ui.rs  graphql_chat_binding.rs  heartbeat_cron.rs
crates/matrix/: Cargo.toml
crates/matrix/src/: access.rs  client.rs  config.rs  error.rs  handler.rs  lib.rs  oidc.rs  outbound.rs  plugin.rs  state.rs  verification.rs
crates/mcp-agent-bridge/: Cargo.toml
crates/mcp-agent-bridge/src/: lib.rs
crates/msteams/: Cargo.toml
crates/msteams/src/: activity.rs  attachments.rs  auth.rs  cards.rs  chunking.rs  config.rs  errors.rs  graph.rs  jwt.rs  lib.rs  outbound.rs  plugin.rs  state.rs  streaming.rs
crates/node-exec-types/: Cargo.toml
crates/node-exec-types/src/: lib.rs
crates/nostr/: Cargo.toml
crates/nostr/src/: access.rs  bus.rs  config.rs  error.rs  keys.rs  lib.rs  outbound.rs  plugin.rs  profile.rs  seen.rs  state.rs
crates/nostr/tests/: nostr_integration.rs
crates/oauth/: Cargo.toml
crates/oauth/src/: callback_server.rs  flow.rs  lib.rs  pkce.rs  redirect.rs
crates/projects/: Cargo.toml
crates/projects/src/: complete.rs  context.rs  detect.rs  lib.rs  store.rs  types.rs  worktree.rs
crates/providers/: Cargo.toml
crates/providers/src/: anthropic.rs  contract.rs  github_copilot.rs  lib.rs  model_catalogs.rs  nearai.rs  openai.rs  openai_codex.rs  openai_compat.rs  opencode_zen.rs
crates/providers/tests/: anthropic_integration.rs  deepseek_integration.rs  fireworks_integration.rs  gemini_integration.rs  kimi_code_integration.rs  minimax_integration.rs  mistral_integration.rs  moonshot_integration.rs  nearai_integration.rs  openai_compat_type_arrays.rs  openai_integration.rs  openrouter_integration.rs  zai_integration.rs
crates/qmd/: Cargo.toml
crates/qmd/src/: lib.rs  manager.rs  runtime.rs
crates/secret-store/: Cargo.toml
crates/secret-store/src/: lib.rs
crates/sessions/: Cargo.toml
crates/sessions/migrations/: 20260205120000_session_state.sql  20260205130000_session_branches.sql  20260205140000_session_mcp_disabled.sql  20260328100000_channel_sessions_thread_id.sql  20260430120000_session_sandbox_backend.sql
crates/sessions/src/: lib.rs  message.rs  metadata.rs  state_store.rs  store.rs
crates/signal/: Cargo.toml
crates/signal/src/: client.rs  config.rs  inbound.rs  lib.rs  outbound.rs  plugin.rs  sse.rs  state.rs
crates/skills/: Cargo.toml
crates/skills/src/: bundled.rs  discover.rs  install.rs  lib.rs  manifest.rs  migration.rs  parse.rs  portability.rs  prompt_gen.rs  requirements.rs  safety.rs  types.rs  watcher.rs
crates/telegram/: Cargo.toml
crates/telegram/src/: bot.rs  config.rs  handlers.rs  lib.rs  outbound.rs  plugin.rs  topic.rs
crates/tools/: Cargo.toml
crates/tools/src/: approval.rs  auto_checkpoint.rs  branch_session.rs  browser.rs  checkpoints.rs  cron_tool.rs  exec.rs  file_io.rs  firecrawl.rs  image_cache.rs  lib.rs  location.rs  nodes.rs  params.rs  policy.rs  process.rs  sandbox.rs  session_state.rs  sessions_communicate.rs  skill_tools.rs  spawn_agent.rs  spawn_agent_tasks.rs  spawn_agent_tests.rs  task_list.rs  web_fetch.rs  web_search.rs  webhook_tool.rs
crates/web/: Cargo.toml
crates/web/src/: api.rs  assets.rs  lib.rs  spa.rs  templates.rs  terminal.rs
crates/web/ui/: input.css  package-lock.json  package.json  playwright.config.cjs  tsconfig.json  vite.config.ts
crates/webhooks/: Cargo.toml
crates/webhooks/migrations/: 20260407000000_initial.sql  20260407100000_unique_delivery_key.sql  20260429000000_deliver_only.sql
crates/webhooks/src/: auth.rs  dedup.rs  error.rs  filter.rs  lib.rs  (+5 more)
crates/whatsapp/: Cargo.toml
(+817 files in other folders)
