[workspace]
members = [
  "crates/agents",
  "crates/auto-reply",
  "crates/browser",
  "crates/canvas",
  "crates/channels",
  "crates/cli",
  "crates/common",
  "crates/config",
  "crates/cron",
  "crates/gateway",
  "crates/mcp",
  "crates/media",
  "crates/memory",
  "crates/oauth",
  "crates/onboarding",
  "crates/plugins",
  "crates/projects",
  "crates/protocol",
  "crates/routing",
  "crates/sessions",
  "crates/skills",
  "crates/telegram",
  "crates/tools",
]
resolver = "2"

[workspace.lints.rust]
unsafe_code = "deny"

[workspace.package]
edition    = "2024"
license    = "MIT"
repository = "https://github.com/penso/moltis"
version    = "0.1.3"

[workspace.dependencies]
# Async runtime
tokio = { features = ["full"], version = "1" }
# HTTP/WS server
axum = { features = ["ws"], version = "0.8" }
# Serialization
serde      = { features = ["derive"], version = "1" }
serde_json = "1"
# Error handling
anyhow    = "1"
thiserror = "2"
# OpenSSL (vendored for cross-compilation)
openssl = { features = ["vendored"], version = "0.10" }
# Logging
opentelemetry         = { version = "0.29" }
opentelemetry-otlp    = { features = ["tonic"], version = "0.29" }
opentelemetry_sdk     = { features = ["rt-tokio"], version = "0.29" }
tracing               = "0.1"
tracing-opentelemetry = "0.30"
tracing-subscriber    = { features = ["env-filter", "json"], version = "0.3" }
# CLI
clap = { features = ["derive", "env"], version = "4" }
# Database
sqlx = { features = ["runtime-tokio", "sqlite"], version = "0.8" }
# HTTP client
reqwest = { features = ["json", "stream"], version = "0.12" }
# UUID
uuid = { features = ["v4"], version = "1" }
# Async streams
directories       = "6"
dotenvy           = "0.15"
futures           = "0.3"
serde_yaml        = "0.9"
tokio-stream      = "0.1"
tokio-tungstenite = "0.26"
toml              = "0.8"
# LLM provider crates (optional, behind feature flags)
async-openai = { features = ["chat-completion"], version = "0.32" }
base64       = "0.22"
fd-lock      = "4"
genai        = "0.5"
open         = "5.3"
rand         = "0.8"
secrecy      = { features = ["serde"], version = "0.8" }
sha2         = "0.10"
teloxide     = { features = ["macros"], version = "0.13" }
tokio-util   = "0.7"
# TLS / certificate generation
axum-server    = { features = ["tls-rustls"], version = "0.7" }
rcgen          = "0.13"
rustls         = { features = ["ring"], version = "0.23" }
rustls-pemfile = "2"
tokio-rustls   = "0.26"

# Workspace crates
moltis-agents     = { features = ["provider-github-copilot", "provider-kimi-code", "provider-openai-codex"], path = "crates/agents" }
moltis-auto-reply = { path = "crates/auto-reply" }
moltis-browser    = { path = "crates/browser" }
moltis-canvas     = { path = "crates/canvas" }
moltis-channels   = { path = "crates/channels" }
moltis-cli        = { path = "crates/cli" }
moltis-common     = { path = "crates/common" }
moltis-config     = { path = "crates/config" }
moltis-cron       = { path = "crates/cron" }
moltis-gateway    = { path = "crates/gateway" }
moltis-mcp        = { path = "crates/mcp" }
moltis-media      = { path = "crates/media" }
moltis-memory     = { path = "crates/memory" }
moltis-oauth      = { path = "crates/oauth" }
moltis-onboarding = { path = "crates/onboarding" }
moltis-plugins    = { path = "crates/plugins" }
moltis-projects   = { path = "crates/projects" }
moltis-protocol   = { path = "crates/protocol" }
moltis-routing    = { path = "crates/routing" }
moltis-sessions   = { path = "crates/sessions" }
moltis-skills     = { path = "crates/skills" }
moltis-telegram   = { path = "crates/telegram" }
moltis-tools      = { path = "crates/tools" }
