[package]
edition.workspace    = true
name                 = "moltis-chat"
repository.workspace = true
version.workspace    = true

[dependencies]
anyhow                = { workspace = true }
async-trait           = { workspace = true }
base64                = { workspace = true }
chrono                = { features = ["serde"], optional = true, workspace = true }
chrono-tz             = { workspace = true }
futures               = { workspace = true }
moltis-agents         = { workspace = true }
moltis-channels       = { workspace = true }
moltis-common         = { workspace = true }
moltis-config         = { workspace = true }
moltis-memory         = { workspace = true }
moltis-metrics        = { optional = true, workspace = true }
moltis-plugins        = { workspace = true }
moltis-projects       = { workspace = true }
moltis-providers      = { workspace = true }
moltis-service-traits = { workspace = true }
moltis-sessions       = { workspace = true }
moltis-skills         = { workspace = true }
moltis-telegram       = { workspace = true }
moltis-tools          = { workspace = true }
moltis-voice          = { workspace = true }
serde                 = { workspace = true }
serde_json            = { workspace = true }
thiserror             = { workspace = true }
tokio                 = { workspace = true }
tokio-stream          = { workspace = true }
tracing               = { workspace = true }
uuid                  = { workspace = true }

[features]
local-llm          = []
metrics            = ["dep:moltis-metrics", "moltis-metrics/sqlite"]
push-notifications = ["dep:chrono"]
web-ui             = ["dep:chrono"]

[dev-dependencies]
async-stream   = { workspace = true }
moltis-channels = { workspace = true }
sqlx            = { workspace = true }
tempfile        = { workspace = true }
tokio           = { workspace = true }
toml            = { workspace = true }

[lints]
workspace = true
