[package]
edition.workspace    = true
name                 = "moltis-chat"
repository.workspace = true
version.workspace    = true

[dependencies]
anyhow                = { workspace = true }
async-trait           = { workspace = true }
base64                = { workspace = true }
chrono                = { features = ["serde"], optional = true, workspace = true }
chrono-tz             = { workspace = true }
futures               = { workspace = true }
moltis-agents         = { workspace = true }
moltis-channels       = { workspace = true }
moltis-common         = { workspace = true }
moltis-config         = { workspace = true }
moltis-memory         = { workspace = true }
moltis-metrics        = { optional = true, workspace = true }
moltis-plugins        = { workspace = true }
moltis-projects       = { workspace = true }
moltis-providers      = { workspace = true }
moltis-service-traits = { workspace = true }
moltis-sessions       = { workspace = true }
moltis-skills         = { workspace = true }
moltis-telegram       = { workspace = true }
moltis-tools          = { workspace = true }
moltis-voice          = { workspace = true }
serde                 = { workspace = true }
serde_json            = { workspace = true }
thiserror             = { workspace = true }
tokio                 = { workspace = true }
tokio-stream          = { workspace = true }
tokio-util            = { workspace = true }
tracing               = { workspace = true }
uuid                  = { workspace = true }

[features]
# Enable the LLM-backed compaction modes (`structured` and `llm_replace`).
# Default-on so users get full compaction out of the box. Disabling this
# removes the streaming-summary path and LLM modes become a runtime config
# error; the `deterministic` and `recency_preserving` modes remain available.
llm-compaction     = []
local-llm          = []
metrics            = ["dep:moltis-metrics", "moltis-metrics/sqlite"]
push-notifications = ["dep:chrono"]
web-ui             = ["dep:chrono"]

default = ["llm-compaction"]

[dev-dependencies]
async-stream    = { workspace = true }
moltis-channels = { workspace = true }
sqlx            = { workspace = true }
tempfile        = { workspace = true }
tokio           = { workspace = true }
toml            = { workspace = true }

[lints]
workspace = true
