[package]
description       = "Rust version of moltbot"
edition.workspace = true
homepage          = "https://docs.molt.bot/"
license           = "MIT"
name              = "moltis-cli"
repository        = "https://github.com/penso/moltis"
version.workspace = true

[package.metadata.binstall]
bin-dir = "{ bin }{ binary-ext }"
pkg-fmt = "tgz"
pkg-url = "{ repo }/releases/download/v{ version }/moltis-{ version }-{ target }.tar.gz"

[package.metadata.deb]
assets     = [["target/release/moltis", "usr/bin/", "755"]]
copyright  = "2025, Moltis Contributors"
depends    = "$auto"
maintainer = "Moltis Contributors"
name       = "moltis"
priority   = "optional"
section    = "net"

[package.metadata.generate-rpm]
assets  = [{ dest = "/usr/bin/moltis", mode = "0755", source = "target/release/moltis" }]
license = "MIT"
name    = "moltis"
summary = "Rust version of moltbot"
url     = "https://docs.molt.bot/"

[[bin]]
name = "moltis"
path = "src/main.rs"

[dependencies]
anyhow             = { workspace = true }
clap               = { workspace = true }
dotenvy            = { workspace = true }
moltis-agents      = { workspace = true }
moltis-common      = { workspace = true }
moltis-config      = { workspace = true }
moltis-gateway     = { workspace = true }
moltis-oauth       = { workspace = true }
moltis-onboarding  = { workspace = true }
moltis-plugins     = { workspace = true }
moltis-skills      = { workspace = true }
moltis-tools       = { workspace = true }
open               = { workspace = true }
reqwest            = { workspace = true }
serde_json         = { workspace = true }
tokio              = { workspace = true }
tracing            = { workspace = true }
tracing-subscriber = { workspace = true }

[features]
default   = ["tailscale", "tls"]
tailscale = ["moltis-gateway/tailscale"]
tls       = ["moltis-gateway/tls"]

[lints]
workspace = true
