[package]
edition.workspace = true
name              = "moltis-common"
version.workspace = true

[dependencies]
async-trait    = { workspace = true }
futures        = { workspace = true }
moltis-metrics = { optional = true, workspace = true }
reqwest        = { workspace = true }
secrecy        = { workspace = true }
serde          = { workspace = true }
serde_json     = { workspace = true }
thiserror      = { workspace = true }
tokio          = { workspace = true }
tracing        = { workspace = true }
uuid           = { workspace = true }

[features]
default = []
metrics = ["dep:moltis-metrics"]

[lints]
workspace = true
